style.css
/*/ Base /*/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

li {
    list-style: none;
}

html, body {
    width: 100%;
    height: 100%;
}

[type="text"] {
    position: absolute;
    opacity: 0;
    pointer-events: none;
}

/*/ html /*/

html {
    font-family: Trash;
    overflow: hidden;

    /* Interface */
    --aside-width: 50px;
    --z-footer: 20;
    --z-navigation: 10;
    --z-header: 20;
    --z-imagePreview: 30;
}

/*/ body /*/

body {
    display: flex;
    background: var(--body-background);
    border: var(--global-border-size) solid var(--global-border-color);
}

/*/ Sidebar /*/

aside {
    display: flex;
    justify-content: center;
    color: var(--dark);
    grid-area: aside;
    writing-mode: tb;
    transform: rotate(180deg);
    font-weight: bold;
    font-size: 30px;
    line-height: calc(var(--aside-width) + 0.215em);
    white-space: nowrap;
    width: var(--aside-width);
    border-left: var(--global-border-size) solid var(--global-border-color);
}

.clock {
    font-weight: normal;
}

/*/ History /*/

header {
    position: relative;
    grid-area: header;
    color: var(--bright);
    display: flex;
    overflow: hidden;
    padding: 1.5ex;
    z-index: var(--z-header);
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
}

.history {
    display: flex;
    align-items: center;
    font-size: 30px;
    font-family: Inter;
}

.history::after {
    /* This ensures that the header will have a height even before
       the first entry is being pushed. */
    content: "*";
    opacity: 0;
}

.history li {
    cursor: pointer;
    white-space: nowrap;
}

.history li::after {
    content: " <-";
    white-space: pre;
    margin-right: -0.3ex;
}

.history li[data-chain="start"]::after {
    content: " ⁂ ";
    margin-right: 1ex;
}

.history li span {
    pointer-events: none;
    position: relative;
    display: inline-block;
    box-shadow: inset 0 0 0 2px var(--bright);
    border-radius: 100px;
    padding: 0 1ex;
}

.history li:first-of-type span,
.history li:hover span {
    background: var(--bright);
    color: var(--dark);
}

/*/ Article Area /*/

main {
    display: flex;
    flex-direction: column;
    background: var(--main-background);
    border-right: none;
    border-top: none;
    position: relative;
    overflow: hidden;
    flex-grow: 1;
}

#articleWrapper {
    position: relative;
    flex-grow: 1;
}

/*/ Navigation /*/

nav {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    align-items: center;
    justify-content: center;
    --option-height: 60px;
    --option-font-size: 32px;
    z-index: var(--z-navigation);
    display: flex;
    opacity: 0;
    transition: opacity 125ms ease-in-out;
}

nav[data-is-visible=true] {
    opacity: 1;
}

#navSelect {
    max-width: 500px;
}

.navOption {
    margin-top: 1.5ex;
    display: flex;
    font-family: Inter;
}

.navOption:first-child {
    margin-top: 0;
}

[data-navOptionIdx] {
    width: var(--option-height);
    height: var(--option-height);
    background: var(--upcoming-option-background);
    color: var(--upcoming-option-color);
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: var(--option-font-size);
    border-radius: var(--option-height);
    border-bottom-right-radius: 0;
    flex-shrink: 0;
}

[data-navOptionIdx="0"]::before { content: ""; }
[data-navOptionIdx="1"]::before { content: "➀"; }
[data-navOptionIdx="2"]::before { content: "➁"; }
[data-navOptionIdx="3"]::before { content: ""; }
[data-is-available="false"] [data-navOptionIdx]::before { content: ""; }

.navOptionTitle {
    height: var(--option-height);
    font-size: var(--option-font-size);
    background: var(--upcoming-option-background);
    color: var(--upcoming-option-color);
    display: flex;
    align-items: center;
    padding: 0 1.5ex;
    border-radius: var(--option-height);
    border-bottom-left-radius: 0;
    white-space: nowrap;
}

[data-is-available="false"] .navOptionTitle:empty::before {
    content: "L̷͇̇ő̷͓a̴̗͑d̷̲͌i̷͉͛n̶͚̈g̸͓̽…̴̯̂";
}

.grid {
    position: fixed;
    top: 0;
    left: 54px;
    right: 2px;
    bottom: 0;
    pointer-events: none;
}

/*/ Loading Spinner /*/

#loadingSpinner {
    display: flex;
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    top: 0;
    align-items: center;
    justify-content: center;
    font-size: 2rem;
    color: var(--article-loading-spinner-color);
}

/*/ Article /*/

#article {
    position: absolute;
    color: var(--article-loading-spinner-color);
    font-family: var(--article-extract-font-family);
    font-size: var(--article-extract-font-size);
    line-height: var(--article-extract-line-height);
    font-feature-settings: var(--article-extract-font-feature-settings);
    transition: all 512ms ease-out;
}

#articleContentWrapper {
    position: absolute;
    top: 0; right: 0;
    bottom: 0; left: 0;
    overflow: hidden;
    padding: 30px;
}

#articleThumbnail[src="data:,"],
#articleImage[src="data:,"] {
    display: none;
}

#articleThumbnail {
    margin-top: 20px;
    border: 2px solid var(--article-image-border-color);
    max-height: var(--footer-height);
    max-width: var(--footer-height);
}

#articleImage {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    height: 95vh;
    width: 95vw;
    object-fit: contain;
    max-height: var(--original-height);
    max-width: var(--original-width);
    z-index: var(--z-imagePreview);
    border: none;
}

.token {
    display: inline-block;
    position: relative;
    white-space: pre-wrap;
    color: var(--token-upcoming-color);
}

#activeToken {
    color: var(--token-active-color);
    z-index: 1;
}

#activeToken #progressToken {
    color: white;
    background: black;
    background: var(--body-background);
    text-shadow: 0 0 30px black;
}

#activeToken #progressToken {
    position: absolute;
    right: 0;
}

#activeToken #progressToken::before {
    content: attr(data-upcoming);
}

#activeToken #progressToken::after {
    color: #ffe0e0;
    background: #e53e3e;
}

#activeToken #progressToken::after {
    content: attr(data-mistyped);
    position: absolute;
    left: 0;
    top: 0;
    white-space: nowrap;
    white-space: pre;
}

.typedToken {
    position: relative;
    color: var(--token-typed-color);
}

.token::before {
    content: attr(data-word);
    overflow: hidden;
    display: inline-block;
}

/*/ Article/Frame /*/

#transformFrame {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    border: var(--frame-border-size) solid var(--frame-border-color);
    z-index: 1;
}

ol[id$=Handles] li {
    position: absolute;
    --edge-handle-offset: calc(-1 * var(--edge-handle-size) / 2 - var(--frame-border-size) / 2);
}

#edgeHandles li {
    width: var(--edge-handle-size);
    height: var(--edge-handle-size);
    background: var(--edge-handle-background);
    box-shadow: inset 0 0 0 var(--frame-border-size) var(--frame-border-color);
}
#edgeHandles li:nth-child(1) {
    top: var(--edge-handle-offset);
    left: var(--edge-handle-offset);
}
#edgeHandles li:nth-child(2) {
    top: var(--edge-handle-offset);
    right: var(--edge-handle-offset);
}
#edgeHandles li:nth-child(3) {
    bottom: var(--edge-handle-offset);
    left: var(--edge-handle-offset);
}
#edgeHandles li:nth-child(4) {
    bottom: var(--edge-handle-offset);
    right: var(--edge-handle-offset);
}

#middleHandles li {
    background: var(--middle-handle-background);
    width: var(--middle-handle-size);
    height: var(--middle-handle-size);
    --middle-handle-offset: calc(-1 * var(--middle-handle-size) / 2 - var(--global-border-size) / 2);
}
#middleHandles li:nth-child(1) {
    top: var(--middle-handle-offset);
    left: calc(50% - var(--middle-handle-size) / 2);
}
#middleHandles li:nth-child(2) {
    top: calc(50% - var(--middle-handle-size) / 2);
    right: var(--middle-handle-offset);
}
#middleHandles li:nth-child(3) {
    bottom: var(--middle-handle-offset);
    left: calc(50% - var(--middle-handle-size) / 2);
}
#middleHandles li:nth-child(4) {
    top: calc(50% - var(--middle-handle-size) / 2);
    left: var(--middle-handle-offset);
}


/*/ Footer /*/

footer {
    grid-area: footer;
    z-index: var(--z-footer);
    padding: 1.5ex;
    text-align: center;
}

#controllerWrapper {
    display: inline-flex;
    grid-gap: 10px;
    justify-content: center;
    align-items: center;
}

.footer-image {
    --footer-image-max-size: 200px;
    position: absolute;
    mix-blend-mode: difference;
    max-height: var(--footer-image-max-size);
    max-width: var(--footer-image-max-size);
    transform-origin: center;
    transition: all 500ms ease-in-out, mix-blend-mode 4s;
}

[id$="Controller"] {
    --button-height: 40px;
    cursor: pointer;
    font-family: Trash;
    outline: none;
    border: none;
    color: var(--bright);
    border-radius: var(--button-height);
    height: var(--button-height);
    font-size: 30px;
    position: relative;
    box-shadow: inset 0 0 0 2px var(--bright);
    border-radius: 100px;
    padding: 0 1ex;
    display: flex;
    align-items: center;
}

.controllerName {
    height: 100%;
    display: inline-block;
    line-height: calc(var(--button-height) + 0.215em);
    padding-right: .5ex;
}

[id$="Controller"]:hover {
    background: var(--bright);
    color: var(--dark);
}

[id$="Controller"] ol {
    position: absolute;
    bottom: calc(var(--button-height) + 10px);
    display: none;
    flex-direction: column;
    margin-bottom: -10px;
    align-items: center;
    transform: translateX(-50%);
    left: 50%;
    padding-bottom: 10px;
    grid-gap: 10px;
}

[id$="Controller"]:hover ol {
    display: flex;
}

[id$="Controller"][settings~=grid] ol {
    grid-template-columns: 1fr 1fr 1fr;
}

[id$="Controller"][settings~=grid]:hover ol {
    display: grid;
}

[id$="Controller"][disabled] {
    opacity: .2;
}

[id$="Controller"]::after {
    --selected-settings-height: 14px;
    content: attr(data-selected-option);
    background: var(--bright);
    color: var(--dark);
    font-size: 0.5em;
    line-height: calc(var(--selected-settings-height) + 0.215em);
    padding: .2em 0.8em;
    border-radius: 100px;
    height: var(--selected-settings-height);
    white-space: nowrap;
}

[id$="Controller"]:hover::after {
    background: var(--dark);
    color: var(--bright);
}

[id$="Controller"] ol li {
    display: inline-block;
    background: var(--dark);
    color: var(--bright);
    padding: 0 20px;
    line-height: calc(var(--button-height) + 0.215em);
    border-radius: 100px;
    height: var(--button-height);
    font-size: 30px;
    /* margin: 0 0 10px 10px; */
    position: relative;
}

[id$="Controller"] ol li::before {
    content: "";
    position: absolute;
    top: 0; right: 0;
    bottom: 0; left: 0;
    background: var(--dark);
    border-radius: 100px;
    opacity: .5;
}

@keyframes wiggle {
    0% {
        transform: skewY(2deg);
    } 100% {
        transform: skewY(-2deg);
    }
}

[id$="Controller"] ol li.selected-option::before {
    display: none;
}

[id$="Controller"] ol li:hover {
    animation: wiggle 512ms infinite ease-in-out alternate;
}

